log
Thu 09 May 2024 03:34:39 AM UTC: 
 tests:  1|8
total_score: 0/70
0833193
Thu 09 May 2024 04:39:26 AM UTC: 
 treemap.c | 13 +++++++++----
 1 file changed, 9 insertions(+), 4 deletions(-)
 tests:  4|7
total_score: 5/70
7e6fa20
Thu 09 May 2024 04:43:50 AM UTC: 
 treemap.c | 25 +++++++++++++++++++++++--
 1 file changed, 23 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:100:1: error: control reaches end of non-void function [-Werror=return-type]
  100 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60f4007
Thu 09 May 2024 04:44:29 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|6
total_score: 15/70
6dcae4c
Thu 09 May 2024 05:07:03 AM UTC: 
 treemap.c | 48 +++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 47 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
84db465
Thu 09 May 2024 05:09:03 AM UTC: 
 treemap.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  15|4
total_score: 25/70
8ac0983
Thu 09 May 2024 05:10:31 AM UTC: 
 treemap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  13|5
total_score: 25/70
25bb3fa
Thu 09 May 2024 05:11:00 AM UTC: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
b79f1d6
Thu 09 May 2024 05:25:38 AM UTC: 
 treemap.c | 55 ++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 54 insertions(+), 1 deletion(-)
 tests:  0|0
042c31c
Thu 09 May 2024 05:27:43 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  18|3
total_score: 40/70
564fe3b
Sat 11 May 2024 11:49:30 PM UTC: 
 treemap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  20|2
total_score: 45/70
a9908bb
Sat 11 May 2024 11:52:51 PM UTC: 
 treemap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  22|2
total_score: 50/70
57601a7
Sun 12 May 2024 12:01:28 AM UTC: 
 treemap.c | 22 ++++++++++++++--------
 1 file changed, 14 insertions(+), 8 deletions(-)
 tests:  0|0
8d63964
Sun 12 May 2024 12:04:31 AM UTC: 
 treemap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  25|1
total_score: 60/70
f44afce
Sun 12 May 2024 12:12:07 AM UTC: 
 treemap.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  29|0
total_score: 70/70
e3a6ab4
